tests/paczka1/fuzzy1/24481140.err
Error in line 1: t66Vt4CkO AAA7 73,4
Error in line 3: A181 S572 69,1
Error in line 8: RkMqcNHs A997 31,0
Error in line 11: RkMqcNHs A181 65,4
Error in line 28: yhC S572 41,6
Error in line 35: uh82eX A997 73,85
